fixed comments flex wrap

--- a/src/shared/ProfileTabs.css
+++ b/src/shared/ProfileTabs.css
@@ -152,7 +152,6 @@ button:active{
 .comment-data{
   display: flex;
   align-items: center;
-  flex-wrap: wrap;
   width: 100%;
   gap: 0.5rem;
 }
